src/objects/c2g__FilterElement__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__ClosingBrackets__c</fullName>
        <label>Closing Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CombineType__c</fullName>
        <label>Combine Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>And</fullName>
                </value>
                <value>
                    <fullName>Or</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Field__c</fullName>
        <label>Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Filter__c</fullName>
        <label>Filter</label>
        <referenceTo>c2g__Filter__c</referenceTo>
        <relationshipLabel>Filter Elements</relationshipLabel>
        <relationshipName>FilterElements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__FromValue__c</fullName>
        <label>From</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OpeningBrackets__c</fullName>
        <label>Opening Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&lt;&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>in range</fullName>
                </value>
                <value>
                    <fullName>not in range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ToValue__c</fullName>
        <label>To</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>zDeprecated:Filter Element</label>
    <nameField>
        <displayFormat>FE-{000000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filter Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>